# ScrumSurvivor

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  run.ps1  run_config.ps1  run_create_assets.ps1  run_setup.ps1  run_verifier.ps1  setup_venv.ps1
src/illusion_verifier/: __init__.py  __main__.py  devices.py  main.py  recorder.py  run_verifier.ps1
src/scrumsurvivor/: __init__.py  __main__.py  cli.py  create_assets.py  pipeline.py  setup_wizard.py
src/scrumsurvivor/app/: __init__.py  preview.py
src/scrumsurvivor/audio/: __init__.py  delay_buffer.py  device_selector.py  duplex_transport.py  latency_calibrator.py  presentation_scheduler.py  sync_verifier.py  virtual_audio.py
src/scrumsurvivor/capture/: __init__.py  microphone.py  webcam.py
src/scrumsurvivor/compositor/: __init__.py  frame_compositor.py  transition.py
src/scrumsurvivor/config/: __init__.py  settings.py
src/scrumsurvivor/detection/: __init__.py  face_detector.py  speech_detector.py
src/scrumsurvivor/idle/: __init__.py  blink.py  breathing.py  clip_manager.py  head_sway.py  idle_compositor.py  noise.py
src/scrumsurvivor/lipsync/: __init__.py  audio_preprocessor.py  face_crop.py  gpu_check.py  wav2lip_engine.py
src/scrumsurvivor/output/: __init__.py  virtual_camera.py
src/tests/: __init__.py  conftest.py
src/tests/test_app/: test_cli.py  test_config.py  test_create_assets.py  test_illusion_verifier.py  test_transition.py
src/tests/test_audio/: test_delay_buffer.py  test_duplex_transport.py  test_latency_calibrator.py  test_presentation_scheduler.py  (+2 more)
(+15 files in other folders)
