[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrumsurvivor"
version = "0.1.0"
description = "Survive mandatory camera-on meetings with an AI avatar"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "hardware: tests that require physical devices (webcam, microphone)",
    "gpu: tests that require NVIDIA GPU with CUDA",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
